--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "maatwebsite/laravel-nova-excel": "^1.3",
         "mostafaznv/nova-video": "^4.0",
         "outl1ne/nova-color-field": "^2.0",
-        "unisharp/laravel-filemanager": "^2.6" 
+        "unisharp/laravel-filemanager": "^2.6",
+        "van-ons/laraberg": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
