--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 APP_NAME=Complexe-Agadir
 APP_ENV=local
-APP_KEY=base64:ZpCMXk8INX88nSwqqiH5ddRUCIX4tEvzsyYtlI6y7iE=
+APP_KEY=base64:latTOgu4ByWF0w6m6eFP2QYDxIAwWTm8VtGaToUDl2U=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
-NOVA_LICENSE_KEY=DfDwOqcqRqdq6Nqy4u9CHBmtfNi8SjtGjFOIgdZMRJPUvISH4w
+NOVA_LICENSE_KEY=TJmvn1rvQDzKQUwe0IYpw24UYPwjT7S1YauoTKXAcBfPBEJACi
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -31,13 +31,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=mail.cha-agadir.ma
 MAIL_PORT=465
-MAIL_USERNAME="contact.cha.agadir@gmail.com"
-MAIL_PASSWORD="rmeowylvlnhbkvvl"
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="contact@cha-agadir.ma"
-MAIL_FROM_NAME="Cha Agadir"
+MAIL_USERNAME="contact@cha-agadir.ma"
+MAIL_PASSWORD="01233378Marie@@"
+MAIL_ENCRYPTION=ssl
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
